# Socrates

./: CMakeLists.txt  LICENSE  README.md  github
src/: CMakeLists.txt  Compiler.cpp  Compiler.hpp  SocratesAST.hpp  defs.hpp  lexer.l  main.cpp  parser.y  soc_driver.cpp  soc_driver.hpp  soc_scanner.hpp  test.soc
